--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 @import "./variables";
 @import "./elements";
 @import "./icons";
+@import "../components/components";
 @import "../layouts/layout";
