--- a/src/components/Header/NavBar/_navbar.scss
+++ b/src/components/Header/NavBar/_navbar.scss
@@ -9,6 +9,12 @@
   margin-inline: auto;
   color: white;
 
+  &-logo {
+    & img {
+      max-height: 60px;
+    }
+  }
+
   &-menu {
     width: 100%;
     &-items {
