--- a/src/layouts/Skills/_skills.scss
+++ b/src/layouts/Skills/_skills.scss
@@ -11,8 +11,9 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      row-gap: 0.5rem;
       &-logo {
-        width: 50px;
+        width: 64px;
       }
     }
   }
@@ -40,6 +41,9 @@
       grid-row: 1 / 3;
       display: unset;
       overflow: hidden;
+      & img {
+        object-position: -300px;
+      }
     }
   }
 }
