--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -60,8 +60,15 @@ a {
 }
 
 a,
-button {
+button,
+.pointer {
   cursor: pointer;
+}
+
+.pointer-path {
+  & path {
+    cursor: pointer;
+  }
 }
 
 ul {
