--- a/src/layouts/Footer/_footer.scss
+++ b/src/layouts/Footer/_footer.scss
@@ -29,7 +29,7 @@
   }
 
   .form-btn {
-    width: 11rem;
+    width: minmax(11rem, 20rem);
     background-color: transparent;
     outline: none;
     border: none;
