--- a/src/layouts/_layout.scss
+++ b/src/layouts/_layout.scss
@@ -2,5 +2,7 @@
 @import "./Profile/profile";
 @import "./Skills/skills";
 @import "./Jobs/jobs";
-@import "./Blog/blog";
+@import "./BlogSum/blogSum";
 @import "./Footer/footer";
+@import "./Blogs/blogs";
+@import "./Blog/blog";
