--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,4 +6,7 @@ $light-red-colour: #e25656;
 $red-wine-colour: #6d0f0f;
 
 /** Fonts setting */
-$font-main-type: Helvetica, Arial, sans-serif;
+$font-main-type: Arial, Helvetica, sans-serif;
+
+/** Screen sizes */
+$mobile: 800px;
