Fixing Navbar component

--- a/src/components/Header/NavBar/_navbar.scss
+++ b/src/components/Header/NavBar/_navbar.scss
@@ -1,4 +1,4 @@
-.nav__bar {
+/* .nav__bar {
   display: flex;
   justify-content: space-between;
   width: min(100%, 64rem);
@@ -68,3 +68,4 @@
     }
   }
 }
+ */
