--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $light-dark-colour: lighten($main-dark-colour, 10%);
 $main-red-colour: #fd2121;
 $light-red-colour: #e25656;
 $red-wine-colour: #6d0f0f;
+$quote-bg: #f6f6f6;
 
 /** Fonts setting */
 $font-main-type: Arial, Helvetica, sans-serif;
