Nav bar component refactoring

--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -1,4 +1,4 @@
-@import "./Header/NavBar/navbar";
 @import "./Carrusel/carrusel";
 @import "./Blog/blog";
 @import "./General/general";
+@import "./NavBar/navbar";
