--- a/src/layouts/Header/_header.scss
+++ b/src/layouts/Header/_header.scss
@@ -3,15 +3,14 @@ header {
 }
 
 .nav__bar {
-  //TODO: Add for small screen
-  top: 6rem;
-  padding-bottom: 1rem;
-  left: 0;
-  background-color: rgba($color: $light-dark-colour, $alpha: 0.7);
-  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 1rem;
+  padding-top: 1em;
+  padding-left: 2%;
+  padding-right: 2%;
+  width: 100%;
+  height: 6rem;
 
   &-logo {
     cursor: pointer;
@@ -19,30 +18,54 @@ header {
       max-height: 60px;
     }
   }
+}
 
-  &-menu {
-    width: 100%;
-    &-items {
+@media (max-width: $mobile) {
+  .nav__bar {
+    &-menu {
+      position: absolute;
+      top: 6rem;
+      left: 0;
+      background-color: rgba($color: $light-dark-colour, $alpha: 0.7);
+      width: 100%;
       display: flex;
-      justify-content: space-evenly;
-      list-style-type: none;
+      flex-direction: column;
+      align-items: center;
     }
     &-item {
-      & a {
-        text-decoration: none;
+      padding-block: 0.5rem;
+      text-align: center;
+      padding-bottom: 2rem;
+      a {
+        border-bottom: 1px solid white;
+        padding: 0.5rem 1rem;
         color: white;
 
         &:hover {
-          border-bottom: 3px solid $main-red-colour;
+          border-color: $main-red-colour;
         }
       }
     }
   }
 }
 
-.menu-toggle {
-  background-color: rgba($color: $light-dark-colour, $alpha: 0.1);
-  border: none;
-  z-index: 99;
-  cursor: pointer;
+@media (min-width: $medium) {
+  .nav__bar {
+    &-menu {
+      width: 100%;
+      & ul {
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+      }
+    }
+    &-item {
+      & a {
+        color: white;
+        &:hover {
+          border-bottom: 3px solid $main-red-colour;
+        }
+      }
+    }
+  }
 }
