--- a/src/layouts/Header/_header.scss
+++ b/src/layouts/Header/_header.scss
@@ -2,6 +2,11 @@ header {
   background: rgba($color: $light-dark-colour, $alpha: 0.7);
 }
 
+.nav__container {
+  width: min(100%, 64rem);
+  margin-inline: auto;
+}
+
 .nav__bar {
   display: flex;
   justify-content: space-between;
@@ -55,7 +60,8 @@ header {
       width: 100%;
       & ul {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: flex-end;
+        column-gap: 3rem;
         list-style-type: none;
       }
     }
