--- a/src/components/Blog/_blog.scss
+++ b/src/components/Blog/_blog.scss
@@ -76,5 +76,13 @@
     row-gap: 0.5rem;
     background: white;
     padding: 1rem;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    & {
+      transition: opacity 0.4s;
+    }
   }
 }
